force-app/main/default/objects/API_Detail__mdt/API_Detail__mdt.object-meta.xml
<CustomObject>
    <description>API Detail holds information about third party API end points like Onesource, Orderhub etc.</description>
    <label>API Detail</label>
    <pluralLabel>API Details</pluralLabel>
</CustomObject>