force-app/main/default/objects/API_Detail__mdt/fields/API_End_Point__c.field-meta.xml
<CustomField>
    <fullName>API_End_Point__c</fullName>
    <description>API End Point</description>
    <label>API End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>