force-app/main/default/objects/API_Detail__mdt/fields/API_Method__c.field-meta.xml
<CustomField>
    <fullName>API_Method__c</fullName>
    <description>API Method type.</description>
    <label>API Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>