force-app/main/default/objects/API_Detail__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>API_End_Point__c</columns>
    <columns>API_Method__c</columns>
    <columns>API_3rd_Party_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>